Updated POM for OpenMRS 1.8.0 dependency